// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VehicleTechDetails /> renders correctly with props 1`] = `
<div
  className="tabs-wrap"
>
  <nav
    className="tabs -content-end -regular -alt -expand"
  >
    <div
      className="tabs__list-wrap"
    >
      <div
        className="tabs__list"
        role="tablist"
      >
        <button
          aria-controls="panel:3-1"
          aria-selected={true}
          className="-active"
          id="tab:3-1"
          onClick={[Function]}
          role="tab"
          type="button"
        >
          Key Information
        </button>
        <button
          aria-controls="panel:3-2"
          aria-selected={false}
          className=""
          id="tab:3-2"
          onClick={[Function]}
          role="tab"
          type="button"
        >
          Standard Equipment
        </button>
        <button
          aria-controls="panel:3-3"
          aria-selected={false}
          className=""
          id="tab:3-3"
          onClick={[Function]}
          role="tab"
          type="button"
        >
          Technical Specification
        </button>
      </div>
    </div>
  </nav>
  <div
    className="tabs__panel -p-000"
  >
    <div
      aria-labelledby="tab:3-1"
      className="tabs--active"
      hidden={false}
      id="panel:3-1"
      role="tabpanel"
    >
      <p>
        Sorry, no key information data availbale.
      </p>
    </div>
    <div
      aria-labelledby="tab:3-2"
      className=""
      hidden={true}
      id="panel:3-2"
      role="tabpanel"
    >
      <p>
        Sorry, no standard equipment data available.
      </p>
    </div>
    <div
      aria-labelledby="tab:3-3"
      className=""
      hidden={true}
      id="panel:3-3"
      role="tabpanel"
    >
      <p>
        Sorry, no data technical data available.
      </p>
    </div>
  </div>
</div>
`;

exports[`<VehicleTechDetails /> renders correctly with props equal null 1`] = `
<div
  className="tabs-wrap"
>
  <nav
    className="tabs -content-end -regular -alt -expand"
  >
    <div
      className="tabs__list-wrap"
    >
      <div
        className="tabs__list"
        role="tablist"
      >
        <button
          aria-controls="panel:1-1"
          aria-selected={true}
          className="-active"
          id="tab:1-1"
          onClick={[Function]}
          role="tab"
          type="button"
        >
          Key Information
        </button>
        <button
          aria-controls="panel:1-2"
          aria-selected={false}
          className=""
          id="tab:1-2"
          onClick={[Function]}
          role="tab"
          type="button"
        >
          Standard Equipment
        </button>
        <button
          aria-controls="panel:1-3"
          aria-selected={false}
          className=""
          id="tab:1-3"
          onClick={[Function]}
          role="tab"
          type="button"
        >
          Technical Specification
        </button>
      </div>
    </div>
  </nav>
  <div
    className="tabs__panel -p-000"
  >
    <div
      aria-labelledby="tab:1-1"
      className="tabs--active"
      hidden={false}
      id="panel:1-1"
      role="tabpanel"
    >
      <p>
        Sorry, no key information data availbale.
      </p>
    </div>
    <div
      aria-labelledby="tab:1-2"
      className=""
      hidden={true}
      id="panel:1-2"
      role="tabpanel"
    >
      <p>
        Sorry, no standard equipment data available.
      </p>
    </div>
    <div
      aria-labelledby="tab:1-3"
      className=""
      hidden={true}
      id="panel:1-3"
      role="tabpanel"
    >
      <p>
        Sorry, no data technical data available.
      </p>
    </div>
  </div>
</div>
`;
